working on file 'style', on the hero

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway:200,300,400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Landing Page</title>
 </head>
 
 <body>
@@ -15,10 +17,10 @@
             <p>We create the best website for you</p>
             <a href="#contact">Contact me</a>
         </div>
-        <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
-                style="height: 100%; width: 100%;">
+        <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #08f;"></path>
+                    style="stroke: none; fill: white;"></path>
             </svg>
         </div>
     </header>
@@ -77,18 +79,19 @@
 
     </section>
     <section class="info-last">
-            <div class="container last-section">
-                <h2 class="title left">Title of section</h2>
-                <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ex impedit recusandae, minima incidunt at modi fugit unde quibusdam facere.</p>
-                <a href="" class="cta">Learn more</a>
-            </div>
-            <img src="image/ilustration.svg" alt="ilustration">
-            <div class="svg-wave"style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
-                    style="height: 100%; width: 100%;">
-                    <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                        style="stroke: none; fill: #08f;"></path>
-                </svg>
-            </div>
+        <div class="container last-section">
+            <h2 class="title left">Title of section</h2>
+            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ex impedit recusandae,
+                minima incidunt at modi fugit unde quibusdam facere.</p>
+            <a href="" class="cta">Learn more</a>
+        </div>
+        <img src="image/ilustration.svg" alt="ilustration">
+        <div class="svg-wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #08f;"></path>
+            </svg>
+        </div>
     </section>
 
     <footer id="contact">
