--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </svg>
         </div>
     </header>
-    <section class="wave container website">
+    <section class="wave-container website">
         <img src="image/illustration1.svg" alt="illustration1">
         <div class="container-text-main">
             <h2 class="title left">Title of section</h2>
@@ -44,7 +44,7 @@
 
     <section class="cards container">
         <h2 class="title">Our services</h2>
-        <div class="content cards">
+        <div class="content-cards">
             <article class="card">
                 <i class="far fa-clone"></i>
                 <h3>title card</h3>
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery container">
         <h2>Our works</h2>
         <article>
             <img src="image/skyline.jpg" alt="">
