--- a/index.html
+++ b/index.html
@@ -1,112 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway:200,300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Raleway:200,300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Landing Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="hero">
-        <div class="text-hero">
-            <h1>Welcome to the website</h1>
-            <p>We create the best website for you</p>
-            <a href="#contact">Contact me</a>
-        </div>
-        <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
-                preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: white;"></path>
-            </svg>
-        </div>
+      <div class="text-hero">
+        <h1>Welcome to the website</h1>
+        <p>We create the best website for you</p>
+        <a href="#contact">Contact me</a>
+      </div>
+      <div class="svg-hero" style="height: 150px; overflow: hidden;">
+        <svg
+          viewBox="0 0 500 150"
+          preserveAspectRatio="none"
+          style="height: 100%; width: 100%;"
+        >
+          <path
+            d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+            style="stroke: none; fill: white;"
+          ></path>
+        </svg>
+      </div>
     </header>
     <section class="wave-container website">
-        <img src="image/illustration1.svg" alt="illustration1">
-        <div class="container-text-main">
-            <h2 class="title left">Title of section</h2>
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore ipsam exercitationem
-                vel animi illo voluptates odio repellendus hic dolore quod?</p>
-            <a href="" class="cta">Learn more</a>
-        </div>
+      <img src="image/illustration1.svg" alt="illustration1" />
+      <div class="container-text-main">
+        <h2 class="title">Title of section</h2>
+        <p class="paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore ipsam
+          exercitationem vel animi illo voluptates odio repellendus hic dolore
+          quod?
+        </p>
+        <a href="" class="cta">Learn more</a>
+      </div>
     </section>
 
     <section class="info">
-        <div class="container">
-            <h2 class="title left"></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-        </div>
+      <div class="container">
+        <h2 class="title left">Together we can support</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
     </section>
 
     <section class="cards container">
-        <h2 class="title">Our services</h2>
-        <div class="content-cards">
-            <article class="card">
-                <i class="far fa-clone"></i>
-                <h3>title card</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" class="cta">Learn more</a>
-            </article>
-            <article class="card">
-                <i class="fas fa-database"></i>
-                <h3>title card</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" class="cta">Learn more</a>
-            </article>
-            <article class="card">
-                <i class="far fa-object-group"></i>
-                <h3>title card</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" class="cta">Learn more</a>
-            </article>
-        </div>
+      <h2 class="title">Our services</h2>
+      <div class="content-cards">
+        <article class="card">
+          <i class="far fa-clone"></i>
+          <h3>title card</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <a href="" class="cta">Learn more</a>
+        </article>
+        <article class="card">
+          <i class="fas fa-database"></i>
+          <h3>title card</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <a href="" class="cta">Learn more</a>
+        </article>
+        <article class="card">
+          <i class="far fa-object-group"></i>
+          <h3>title card</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <a href="" class="cta">Learn more</a>
+        </article>
+      </div>
     </section>
 
     <section class="gallery container">
-        <h2>Our works</h2>
-        <article>
-            <img src="image/skyline.jpg" alt="">
-            <img src="image/nature-sky.jpg" alt="">
-            <img src="image/skyline blue.jpg" alt="">
-            <img src="image/walking in the city.jpg" alt="">
-            <img src="image/clouds on mountains.jpg" alt="">
-            <img src="image/skyline down.jpg" alt="">
+      <h2 class="title">Our works</h2>
+      <div class="container">
+        <article class="gallery-container">
+          <img src="image/skyline.jpg" alt="" />
+          <img src="image/nature-sky.jpg" alt="" />
+          <img src="image/skyline blue.jpg" alt="" />
+          <img src="image/walking in the city.jpg" alt="" />
+          <img src="image/clouds on mountains.jpg" alt="" />
+          <img src="image/skyline down.jpg" alt="" />
         </article>
-
+      </div>
     </section>
     <section class="info-last">
-        <div class="container last-section">
-            <h2 class="title left">Title of section</h2>
-            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ex impedit recusandae,
-                minima incidunt at modi fugit unde quibusdam facere.</p>
-            <a href="" class="cta">Learn more</a>
+      <div class="container last-section">
+        <div class="container-text-main">
+        <h2 class="title">Title of section</h2>
+          <p class="paragraph">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ex
+            impedit recusandae, minima incidunt at modi fugit unde quibusdam
+            facere.
+          </p>
+          <a href="" class="cta">Learn more</a>
         </div>
-        <img src="image/ilustration.svg" alt="ilustration">
-        <div class="svg-wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
-                preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #08f;"></path>
-            </svg>
-        </div>
+        <img src="image/ilustration.svg" alt="ilustration" />
+      </div>
+      <div class="svg-wave" style="height: 150px; overflow: hidden;">
+        <svg
+          viewBox="0 0 500 150"
+          preserveAspectRatio="none"
+          style="height: 100%; width: 100%;"
+        >
+          <path
+            d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+            style="stroke: none; fill: #48D597;
+;"
+          ></path>
+        </svg>
+      </div>
     </section>
 
     <footer id="contact">
-        <div class="container">
-            <h2 class="title">Contact us</h2>
-            <form action="" class="form">
-                <input class="inpu t" type="text" name="" id="" placeholder="name">
-                <input class="input" type="email" name="" id="" placeholder="enter email">
-                <textarea class="input" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                <input class="input" type="submit" value="Send">
-            </form>
-        </div>
+      <div class="container">
+        <h2 class="title">Contact us</h2>
+        <form action="" class="form">
+          <input class="input" type="text" name="" id="" placeholder="name" />
+          <input class="input" type="email" name="" id="" placeholder="email" />
+          <textarea
+            class="input"
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+          <input class="input" type="submit" value="Send" />
+        </form>
+      </div>
     </footer>
-    <script src="https://kit.fontawesome.com/6ff3b4ba1e.js" crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/6ff3b4ba1e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
